# mdtools

./: .gitignore  README.md  pyproject.toml  test.csv  test_output.csv
.github/workflows/: CI.yaml
mdtools/: classes.py  cocoutils.py  convert.py  crop.py  join.py  labelstudio.py  mdtools.py  plot.py  readexif.py  scrap.py  tabulate.py
tests/: test_mdtools.py
tests/test_images/: test_folder_output.csv  test_folder_output.json  test_folder_output_coco.json  test_folder_output_ls.json  test_images_output.json  test_images_output_coco_ct.json  test_images_output_ls.json  test_images_output_ls.label_config.xml
