[tool.poetry]
name = "mdtools"
version = "0.1.0"
description = "MegaDetector tools - convert and parse MDv5 results"
authors = ["Valentin <valentin.lucet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "9.0.1"
tqdm = "^4.64.1"
label-studio-converter = "^0.0.44"
click = "^8.1.3"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
PyExifTool = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mdtools = "mdtools.mdtools:mdtools"
